tackle bugs collapse expand nested groups, no collapse on add block, buttons above blocks added

--- a/resources/sass/colors.scss
+++ b/resources/sass/colors.scss
@@ -5,5 +5,5 @@
 
 .dark .dark\:hover\:bg-gray-900:hover {
     --tw-bg-opacity: 1;
-    background-color: rgba(var(--colors-gray-900), var(--tw-bg-opacity));
+    background-color: rgba(13, 13, 13, var(--tw-bg-opacity));
 }
